force-app/main/default/objects/PayLog__c/PayLog__c.object-meta.xml
<CustomObject>
    <label>PayLog</label>
    <nameField>
        <displayFormat>PL-{00000000}</displayFormat>
        <label>PayLog</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>PayLogs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>