force-app/main/default/objects/PayLog__c/fields/Activation_Deactivation_Date__c.field-meta.xml
<CustomField>
    <fullName>Activation_Deactivation_Date__c</fullName>
    <label>Activation Deactivation Date</label>
    <type>Date</type>
</CustomField>