force-app/main/default/objects/PayLog__c/fields/NIMS_Order_Id__c.field-meta.xml
<CustomField>
    <fullName>NIMS_Order_Id__c</fullName>
    <label>NIMS Order Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>