force-app/main/default/objects/PayLog__c/fields/Order_Item_Id__c.field-meta.xml
<CustomField>
    <fullName>Order_Item_Id__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Order Item Id</label>
    <referenceTo>OrderItem</referenceTo>
    <relationshipName>POE_PayLogs</relationshipName>
    <type>Lookup</type>
</CustomField>