force-app/main/default/objects/PayLog__c/fields/Parent_Voucher__c.field-meta.xml
<CustomField>
    <fullName>Parent_Voucher__c</fullName>
    <label>Parent Voucher</label>
    <length>255</length>
    <type>Text</type>
</CustomField>