force-app/main/default/objects/PayLog__c/fields/Process_Complete_Under__c.field-meta.xml
<CustomField>
    <fullName>Process_Complete_Under__c</fullName>
    <label>Process Complete Under</label>
    <length>255</length>
    <type>Text</type>
</CustomField>