force-app/main/default/objects/PayLog__c/fields/Sales_Agent_Name__c.field-meta.xml
<CustomField>
    <fullName>Sales_Agent_Name__c</fullName>
    <label>Sales Agent Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>