force-app/main/default/objects/PayLog__c/fields/Voucher_Total__c.field-meta.xml
<CustomField>
    <fullName>Voucher_Total__c</fullName>
    <label>Voucher Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>