force-app/main/default/objects/PayLog__c/fields/Xactly_Commission_Id__c.field-meta.xml
<CustomField>
    <fullName>Xactly_Commission_Id__c</fullName>
    <label>Xactly Commission Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>