force-app/main/default/objects/PayLog__c/fields/Xactly_Comp_Order_Item_Id__c.field-meta.xml
<CustomField>
    <fullName>Xactly_Comp_Order_Item_Id__c</fullName>
    <label>Xactly Comp Order Item Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>