force-app/main/default/objects/PayLog__c/fields/Xactly_Credit_Id__c.field-meta.xml
<CustomField>
    <fullName>Xactly_Credit_Id__c</fullName>
    <label>Xactly Credit Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>