force-app/main/default/objects/PayLog__c/fields/Xactly_Payment_Id__c.field-meta.xml
<CustomField>
    <fullName>Xactly_Payment_Id__c</fullName>
    <label>Xactly Payment Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>