force-app/main/default/objects/PayLog__c/recordTypes/AP.recordType-meta.xml
<RecordType>
    <fullName>AP</fullName>
    <active>true</active>
    <label>AP</label>
</RecordType>