force-app/main/default/objects/PayLog__c/recordTypes/AR.recordType-meta.xml
<RecordType>
    <fullName>AR</fullName>
    <active>true</active>
    <label>AR</label>
</RecordType>